# handler/deleteOpening.go
@@ -8,6 +8,18 @@ import (
 	"github.com/matheusbrauna/gopportunities/schemas"
 )
 
+// @BasePath /api/v1
+
+// @Summary Delete Opening
+// @Description Delete a new job opening
+// @Tags Openings
+// @Accept json
+// @Produce json
+// @Param id query string true "Opening identification"
+// @Success 200 {object} DeleteOpeningResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 404 {object} ErrorResponse
+// @Router /opening [delete]
 func DeleteOpeningHandler(c *gin.Context) {
 	id := c.Query("id")
 	if id == "" {
